// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectTile when provided with a name, technologies list and description and a codeHref and a demoHref should render correctly 1`] = `
<article
  className="projectTile"
>
  <header>
    <h3>
      test-project-name
    </h3>
    <h4
      className="techHeader"
    >
      Technologies
    </h4>
    <p
      className="techList"
    >
      react, redux, node
    </p>
  </header>
  <p>
    test-description
  </p>
  <footer
    className="footer"
  >
    <a
      className="buttonLink buttonLink"
      href="https://test-href"
      target="_blank"
    >
      View demo
    </a>
    <a
      className="buttonLink buttonLink"
      href="https://test-href"
      target="_blank"
    >
      View code
    </a>
  </footer>
</article>
`;

exports[`ProjectTile when provided with a name, technologies list and description and a codeHref should render correctly 1`] = `
<article
  className="projectTile"
>
  <header>
    <h3>
      test-project-name
    </h3>
    <h4
      className="techHeader"
    >
      Technologies
    </h4>
    <p
      className="techList"
    >
      react, redux, node
    </p>
  </header>
  <p>
    test-description
  </p>
  <footer
    className="footer"
  >
    <a
      className="buttonLink buttonLink"
      href="https://test-href"
      target="_blank"
    >
      View code
    </a>
  </footer>
</article>
`;

exports[`ProjectTile when provided with a name, technologies list and description and a demoHref should render correctly 1`] = `
<article
  className="projectTile"
>
  <header>
    <h3>
      test-project-name
    </h3>
    <h4
      className="techHeader"
    >
      Technologies
    </h4>
    <p
      className="techList"
    >
      react, redux, node
    </p>
  </header>
  <p>
    test-description
  </p>
  <footer
    className="footer"
  >
    <a
      className="buttonLink buttonLink"
      href="https://test-href"
      target="_blank"
    >
      View demo
    </a>
  </footer>
</article>
`;

exports[`ProjectTile when provided with a name, technologies list and description should render correctly 1`] = `
<article
  className="projectTile"
>
  <header>
    <h3>
      test-project-name
    </h3>
    <h4
      className="techHeader"
    >
      Technologies
    </h4>
    <p
      className="techList"
    >
      react, redux, node
    </p>
  </header>
  <p>
    test-description
  </p>
</article>
`;
